# google-cloud

./: .gitignore  README.md
app-engine/: .gitignore  .gitlab-ci.yml  README.md  hello-world-app.sh  requirements.txt  version.py
artifact-registry/docker/: README.md  custom_image.sh
artifact-registry/python/example-project1/der-die-das/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  local_deploy.sh  requirements.txt  setup.cfg  setup.py
artifact-registry/python/example-project1/der-die-das/der_die_das/: __init__.py
artifact-registry/tf/: main.tf
bigquery/bigquery-ml/: README.md
bigquery/cloud-sdk/: README.md  ddl-script
bigquery/dbt/: .gitignore  .gitlab-ci.yml  README.md  dbt_project.yml
bigquery/flask/: README.md  bq_app.py
bigquery/python/: client_batch_query.py  client_dataset.py  client_get_credentials.py  client_interactive_query.py  client_list_jobs.py  client_query_dry_run.py  client_query_scheduled.py  client_table.py  main.py  run_list_jobs.py  run_simple_query.py
cloud-build/step1/: README.md
cloud-build/step2-gitops/: setup.sh
cloud-functions/basic-functions/: setup.sh
cloud-logging/: README.md
cloud-monitoring/: README.md
cloud-run-flask/: README.md  requirements.txt
cloud-sql/: README.md  cloud_sql_private.tf  cloud_sql_public.tf  network.tf  postgres_conn.py  variables.tf
compute-engine/: README.md
dataproc/: README.md
dataproc-app/: README.md  dataproc-app.sh  gcp-iac.sh  mkdocs.yml  requirements.txt  wf_temp.sh
iap/: setup.sh
pubsub/: READM.md  ps_execute.sh
secret-manager/: README.md  secrets_call.py
(+179 files in other folders)
