[metadata]
name = der-die-das
description = Python Library for DER DIE DAS APP
long_description = file: README.md, CHANGELOG.md
license = Copyright (c) 2022 Yuya Tinnefeld
author = yuya tinnefeld
author_email = yuyatinnefeld@gmail.com
python_requires = '>=3.7'
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7


[options]
include_package_data = True
zip_safe = True
install_requires =
    beautifulsoup4==4.10.0
    requests==2.26.0